src/objects/BL_District_Forecast__c.object
<CustomObject>
    <description>THIS IS A TEST OBJECT - Not in use
Holds District-BL forecast data for reporting against Opportunity pipeline</description>
    <fields>
        <fullName>Business_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select BL for this forecast amount</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>Business_Line__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <inlineHelpText>Enter District Name</inlineHelpText>
        <label>District</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <inlineHelpText>Enter current forecast amount for this BL-Region combination.</inlineHelpText>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <description>Month of this forecast</description>
        <inlineHelpText>Month of this forecast</inlineHelpText>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <label>BL-District Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FCT-{000000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BL-District Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>